Add layout selection feature: - Create layouts page with 5 template options - Add layout-specific styles to moodboard - Update routes to handle layout selection - Add layout selection to create process

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
                 <i class="fas fa-paint-brush fa-3x mb-3 text-primary"></i>
                 <h3>Customize Layout</h3>
                 <p>Choose from different layouts to match your style</p>
+                <a href="{{ url_for('layouts') }}" class="btn btn-outline-primary mt-3">
+                    <i class="fas fa-th-large"></i> Browse Layouts
+                </a>
             </div>
         </div>
     </div>
